--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -5,6 +5,8 @@ application.js: application-fe10468cdb685128eba66fc59c536a77.js
 application/index.js: application-fe10468cdb685128eba66fc59c536a77.js
 application.css: application-23ae26aed056b03481ef33e1472c12a8.css
 application/index.css: application-23ae26aed056b03481ef33e1472c12a8.css
+static_pages.css: static_pages-1b13569e9620782f423d4cd3ce931750.css
+static_pages/index.css: static_pages-1b13569e9620782f423d4cd3ce931750.css
 glyphicons-halflings-white.png: glyphicons-halflings-white-6cccd17a7aed91dbc0157d343c68c0d9.png
 glyphicons-halflings-white/index.png: glyphicons-halflings-white-6cccd17a7aed91dbc0157d343c68c0d9.png
 glyphicons-halflings.png: glyphicons-halflings-2851b489e8c39f8fad44fc10efb99c3e.png
